--- a/package.json
+++ b/package.json
@@ -10,21 +10,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "0.2.0",
+    "@hookform/resolvers": "^3.3.4",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.39.3",
+    "@vercel/edge-config": "^1.4.3",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.0.0",
+    "lucide-react": "^0.378.0",
     "next": "15.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "@supabase/supabase-js": "^2.39.3",
-    "@supabase/ssr": "^0.5.2",
-    "@google/generative-ai": "0.2.0",
-    "framer-motion": "^11.0.0",
-    "lucide-react": "^0.378.0",
-    "zustand": "^4.5.0",
-    "zod": "^3.23.0",
-    "clsx": "^2.1.1",
-    "tailwind-merge": "^2.3.0",
     "react-hook-form": "^7.51.0",
-    "@hookform/resolvers": "^3.3.4",
-    "react-intersection-observer": "^9.8.0"
+    "react-intersection-observer": "^9.8.0",
+    "tailwind-merge": "^2.3.0",
+    "zod": "^3.23.0",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
