--- a/package.json
+++ b/package.json
@@ -1,39 +1,33 @@
+
 {
-  "name": "tiempospro-v4",
+  "name": "tiempospro-v3",
   "private": true,
-  "version": "4.1.0",
+  "version": "3.3.1",
   "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@google/generative-ai": "0.2.0",
-    "@hookform/resolvers": "^3.3.4",
-    "@supabase/ssr": "^0.5.2",
+    "@google/genai": "^0.2.0",
     "@supabase/supabase-js": "^2.39.3",
-    "@vercel/edge-config": "^1.4.3",
-    "clsx": "^2.1.1",
     "framer-motion": "^11.0.0",
-    "lucide-react": "^0.378.0",
-    "next": "15.0.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-hook-form": "^7.51.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.8.0",
-    "tailwind-merge": "^2.3.0",
-    "zod": "^3.23.0",
+    "react-router-dom": "^6.23.1",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
-    "@types/node": "^20.12.7",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.5"
+    "typescript": "^5.3.3",
+    "vite": "^5.0.12"
   }
 }
