--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "tiempospro-v3",
   "private": true,
@@ -13,6 +12,7 @@
   "dependencies": {
     "@google/genai": "^0.2.0",
     "@supabase/supabase-js": "^2.39.3",
+    "bcryptjs": "^3.0.3",
     "framer-motion": "^11.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
