--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,9 @@
 sonar.projectKey=tiempos-pro-v3
 sonar.projectName=Tiempos Pro Digital v3
 sonar.projectVersion=3.3.0
-sonar.sources=src
-sonar.tests=src
-sonar.test.inclusions=**/*.test.ts,**/*.test.tsx
+sonar.sources=components,services,hooks,context,lib,store,App.tsx,index.tsx
+sonar.tests=components,services
+sonar.test.inclusions=**/*.test.ts,**/*.test.tsx,**/*.spec.ts
 sonar.exclusions=node_modules/**,dist/**,coverage/**,**/*.spec.ts
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.scm.provider=git
