--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "tiempospro-v3",
   "private": true,
@@ -6,29 +7,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build-check": "tsc && vite build",
-    "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
-    "format": "prettier --write .",
-    "preview": "vite preview",
-    "prepare": "husky"
-  },
-  "lint-staged": {
-    "*.{ts,tsx}": [
-      "eslint --fix",
-      "prettier --write"
-    ],
-    "*.{json,md,css}": [
-      "prettier --write"
-    ]
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@google/genai": "^0.2.0",
-    "@prisma/client": "^7.2.0",
     "@supabase/supabase-js": "^2.39.3",
-    "@upstash/redis": "^1.35.8",
-    "bcryptjs": "^3.0.3",
     "framer-motion": "^11.0.0",
-    "mongoose": "^9.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.8.0",
@@ -36,28 +21,13 @@
     "zustand": "^4.5.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.2",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
-    "@typescript-eslint/eslint-plugin": "^8.50.1",
-    "@typescript-eslint/parser": "^8.50.1",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
-    "eslint": "^9.39.2",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.4",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-refresh": "^0.4.26",
-    "globals": "^16.5.0",
-    "husky": "^9.1.7",
-    "lint-staged": "^16.2.7",
     "postcss": "^8.4.33",
-    "prettier": "^3.7.4",
-    "prisma": "^7.2.0",
     "tailwindcss": "^3.4.1",
-    "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
-    "typescript-eslint": "^8.50.1",
     "vite": "^5.0.12"
   }
 }
